--- a/assets/css/imports/_top-nav.scss
+++ b/assets/css/imports/_top-nav.scss
@@ -4,8 +4,9 @@
      height:60px;       
      padding:0 1rem .5rem;
      align-items:center;
-     justify-content:flex-start;
+     justify-content:space-between;
      .logo{
          font-size:.8rem;
+         text-align:left;
      }
 }
