--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,8 @@
 
 @import "imports/golpen-ui";
 @import "imports/filelist";
-@import "imports/pen-nav";
+@import "imports/top-nav";
+// @import "imports/form-elements";
 
 @import "imports/editor";
 
@@ -29,7 +30,10 @@ html,body{
 }
 
 body{
-  background: $five;
+  background-color: $five;
+  background-image: linear-gradient(90deg, rgba($five,0.8), rgba(255,0,0,0) 80%),
+              linear-gradient(180deg, adjust-hue($two, 7deg), rgba(0,255,0,0) 70.71%),
+              linear-gradient(137deg, adjust-hue($five, -7deg), rgba(0,0,255,0) 70.71%);
   *{
     box-sizing: border-box;
     scrollbar-color:$three $one;
