--- a/views/partials/config-form.pug
+++ b/views/partials/config-form.pug
@@ -1,21 +1,43 @@
-form.form-control
-	label(for="cpuSelect") CPUs
-	select(name="cpuSelect" id="cpuSelect")
-		option(value="1") 1
-		option(selected="selected" value="2") 2
-		option(value="4") 4
-	label(for="ramSelect") RAM (GB)
-	select(name="ramSelect" id="ramSelect")
-		option(value="1") 1
-		option(selected="selected" value="2") 2
-		option(value="4") 4
-	label(for="diskSelect") Disk (GB)
-	select(name="diskSelect" id="diskSelect")
-		option(selected="selected" value="1") 4
-		option(value="2") 8
-		option(value="4") 16
-	label(for="imageSelect") Image
-	select(name="imageSelect" id="imageSelect")
-		option(selected="selected" value="0x5AzHrUJszd4MI2") Blender (0x5AzHrUJszd4MI2)
-		option(value="S0CLDP4db6mlNaZh") Photos (S0CLDP4db6mlNaZh)
-		option(value="sW66MDjOybWSyPwD") Math (sW66MDjOybWSyPwD)
+.form-control
+	form(id="golem-config-form" action="" method="get")
+		.form-group
+			label(for="cpuSelect")
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#cpu')
+				|CPUs
+			select(name="cpuSelect" id="cpuSelect")
+				option(value="1") 1
+				option(selected="selected" value="2") 2
+				option(value="4") 4
+		.form-group
+			label(for="ramSelect")
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#aspect-ratio')
+				|RAM
+			select(name="ramSelect" id="ramSelect")
+				option(value="1") 1 GB
+				option(selected="selected" value="2") 2 GB
+				option(value="4") 4 GB
+		.form-group
+			label(for="diskSelect")
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#hdd')
+				|Disk
+			select(name="diskSelect" id="diskSelect")
+				option(selected="selected" value="1") 4 GB
+				option(value="2") 8 GB
+				option(value="4") 16 GB
+		.form-group
+			label(for="imageSelect")
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#disc')
+				|Image
+			select(name="imageSelect" id="imageSelect")
+				option(selected="selected" value="0x5AzHrUJszd4MI2") Blender (0x5AzHrUJszd4MI2)
+				option(value="S0CLDP4db6mlNaZh") Photos (S0CLDP4db6mlNaZh)
+				option(value="sW66MDjOybWSyPwD") Math (sW66MDjOybWSyPwD)
+		.form-group.no-border
+			button(type="submit" value="Run" id="submit" class="btn")
+				svg.bi(width='16' height='16' fill='currentColor')
+					use(xlink:href='/icons.svg#play-fill')
+				|Run
