--- a/views/partials/filelist.html
+++ b/views/partials/filelist.html
@@ -1,24 +1,56 @@
-<h4 class="text-two">Files:</h4>
+<h4 class="text-two column-title">Files:</h4>
 <div class="filelist-wrapper">
     <ul>
         <li>
             <input type="checkbox" id="list-item-1">
-            <label for="list-item-1" class="first folder-label">Folder 1</label>
+            <label for="list-item-1" class="first folder-label">
+                <svg class="bi" width="22" height="22" fill="currentColor">
+                    <use xlink:href="/icons.svg#folder2" />
+                </svg>
+                code
+            </label>
             <ul>
-                <li>super-long-freaking-filename.ts</li>
-                <li class="open-in-editor">File.js</li>
-                <li>File.yaml</li>
-                <li>File.json</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-code" />
+                    </svg> blender.js</li>
+                <li class="open-in-editor"><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-code" />
+                    </svg> blender.ts</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-code" />
+                    </svg>blender.py</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-code" />
+                    </svg>cubes.scene</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-code" />
+                    </svg>output.jpg</li>
             </ul>
         </li>
         <li>
             <input type="checkbox" id="list-item-2">
-            <label for="list-item-2" class="first folder-label">Folder 2</label>
+            <label for="list-item-2" class="first folder-label">
+                <svg class="bi" width="22" height="22" fill="currentColor">
+                    <use xlink:href="/icons.svg#folder2" />
+                </svg>
+                assets
+            </label>
             <ul>
-                <li>File.ts</li>
-                <li>File.js</li>
-                <li>File.yaml</li>
-                <li>File.json</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-binary" />
+                    </svg>image_01.jpg</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-binary" />
+                    </svg>image_02.jpg</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-binary" />
+                    </svg>image_03.jpg</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-binary" />
+                    </svg>image_04.jpg</li>
+                <li><svg class="bi" width="22" height="22" fill="currentColor">
+                        <use xlink:href="/icons.svg#file-earmark-binary" />
+                    </svg>image_05.jpg</li>
             </ul>
         </li>
     </ul>
