--- a/assets/css/imports/_golpen-ui.scss
+++ b/assets/css/imports/_golpen-ui.scss
@@ -1,16 +1,17 @@
-#golpen-ui-wrap{
+#golem-slate-ui-wrap{
     position: relative;
     background-color: $one;
     // linear-gradient(195deg, darken($one, 5%) 0%, $one 90%);
     background-image: linear-gradient(90deg, rgba(darken($one, 5%),0.8), rgba(255,0,0,0) 80%),
-                linear-gradient(180deg, adjust-hue($one, 7deg), rgba(0,255,0,0) 60.71%),
-                linear-gradient(157deg, adjust-hue($five, -15deg), rgba(0,255,255,0) 70.71%),
+                linear-gradient(180deg, adjust-hue($one, 7deg), rgba(0,255,0,0) 70.71%),
+                linear-gradient(157deg, adjust-hue($five, -15deg), rgba(0,255,255,0) 50.71%),
+                linear-gradient(157deg, rgba($six,0.6), rgba(0,255,255,0) 60.71%),
                 linear-gradient(to top, rgba($two, 0.5) 0%, rgba($two, 0.3) 5%, rgba($one, 0) 100%);
     border-bottom: 10px solid $one;
     width:90vw;
     height:auto;
     min-height: 90vh;
-    box-shadow: 0rem 2rem 20px -15px rgba($one,.76);
+    box-shadow: 0rem 2rem 20px -15px rgba($one,.5);
     @include media-breakpoint-up(lg) {
         height: 90vh;
     }
@@ -25,11 +26,10 @@
         width:100%;
         height:2rem;
         background: linear-gradient(0deg, rgba($three, 0.2) 0%, rgba($two, 0.2) 3%, rgba($one, 0) 100%);
-        mix-blend-mode: screen;
-        border-bottom-left-radius: .7rem;
-        border-bottom-right-radius: .7rem;
+        mix-blend-mode: color-dodge;
+        border-bottom: 1px solid $one;
     }
-    #golpen-container{
+    #golem-slate-container{
         display:flex;
         flex-direction:column;
         align-content: space-around;
@@ -57,7 +57,7 @@
                 font-size:0;
             }
         }
-        #golpen-filelist{
+        #golem-slate-filelist{
             display:flex;
             flex-direction:column;
             border-bottom:1px solid $two;
@@ -73,7 +73,7 @@
                 height: 100%;
             }
         }
-      #golpen-editor{
+      #golem-slate-editor{
           flex: 1;
           min-height: 40vh;
           #editor-container{
@@ -81,7 +81,7 @@
               height:100%;
           }
       }
-      #golpen-output{
+      #golem-slate-output{
             border-top:1px solid $two;
             transition: flex .8s $transition-base;
             min-height: 50vh;
