--- a/assets/css/imports/_top-nav.scss
+++ b/assets/css/imports/_top-nav.scss
@@ -1,4 +1,4 @@
-#golpen-nav{
+#golem-slate-nav{
      display:flex;
      width: 100%;
      height:60px;       
@@ -7,6 +7,23 @@
      justify-content:space-between;
      .logo{
          font-size:.8rem;
-         text-align:left;
+         display:flex;
+         flex-wrap:nowrap;
+         align-items: center;
+         img{
+             display:inline-block;
+             margin-right:2rem;
+             height:30px;
+             width: auto;
+         }
+         span.slate-name{
+            display:block;
+            white-space:nowrap;
+            border-top: 1px solid $five;
+            border-right: 1px solid $five;
+            border-bottom: none;
+            border-left: 1px solid $five;
+            padding:.2rem .5rem;
+         }
      }
 }
