--- a/assets/css/imports/_variables.scss
+++ b/assets/css/imports/_variables.scss
@@ -5,6 +5,7 @@ $two:#3D5A80;
 $three:#98C1D9;
 $four:#E0FBFC;
 $five:#EE6C4D;
+$six: #9FCC2E;
 
 $theme-colors: (
     "one":$one,
@@ -27,3 +28,7 @@ $theme-colors: (
 // transitions
 
 $transition-base: cubic-bezier(.49,-0.32,.25,1.23);
+
+// icons
+
+$logo: url("data:image/svg+xml,%3Csvg id='gs-logo' data-name='gs-logo' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 28.1'%3E%3Cg%3E%3Cpath d='M2.5,0H97a3,3,0,0,1,3,3V25.1a3,3,0,0,1-3,3H3a3,3,0,0,1-3-3V2.5A2.5,2.5,0,0,1,2.5,0Z' style='fill: %23293241'/%3E%3Cg%3E%3Cpath d='M33.3,13.6a2.8,2.8,0,0,1-1.4-.9,2.5,2.5,0,0,1-.6-1.6,2.8,2.8,0,0,1,.6-1.8,2.3,2.3,0,0,1,1.5-1.2,5.1,5.1,0,0,1,2.2-.5,4.4,4.4,0,0,1,2.3.6,3.6,3.6,0,0,1,1.6,1.4,3.7,3.7,0,0,1,.6,2.1h-.6A3.5,3.5,0,0,0,39,9.9a4.1,4.1,0,0,0-1.4-1.2,4.5,4.5,0,0,0-2-.4l-1.8.3a3.8,3.8,0,0,0-1.3.9A2.5,2.5,0,0,0,32,11a1.7,1.7,0,0,0,.5,1.4,2.3,2.3,0,0,0,1.3.7l2.2.6,2.2.6a2.2,2.2,0,0,1,1.4.9,2.9,2.9,0,0,1,.5,1.7,3.4,3.4,0,0,1-.6,2A3.1,3.1,0,0,1,37.9,20a5.4,5.4,0,0,1-2.2.4,6.6,6.6,0,0,1-2.5-.5,3.8,3.8,0,0,1-1.7-1.6,4,4,0,0,1-.6-2.2h.6A3.8,3.8,0,0,0,32,18a3.2,3.2,0,0,0,1.5,1.3,4,4,0,0,0,2.2.5,4,4,0,0,0,2.7-.8,2.5,2.5,0,0,0,1.1-2.1,2,2,0,0,0-.5-1.4,4.1,4.1,0,0,0-1.1-.7l-2.1-.5A12.6,12.6,0,0,1,33.3,13.6Z' style='fill: %233d5a80'/%3E%3Cpath d='M53.9,17v3.2H44.6V7.9h.6V17Z' style='fill: %233d5a80'/%3E%3Cpath d='M61.2,7.9h.7l5,12.3h-.7l-1.6-4.1H58.5l-1.6,4.1h-.7Zm-2.4,7.6h5.5L61.5,8.8Z' style='fill: %233d5a80'/%3E%3Cpath d='M79.5,7.9v.7H74.9V20.2h-.7V8.6H69.6V7.9Z' style='fill: %233d5a80'/%3E%3Cpath d='M83.3,7.9H92v.7H84v4.9h6.9v.7H84v5.3h8v.7H83.3Z' style='fill: %233d5a80'/%3E%3C/g%3E%3Cg id='pJaRi9.tif'%3E%3Cpath d='M13.9,7.4l2-2,.4.4-2,2a3.2,3.2,0,0,1,.6,3.5,3.4,3.4,0,0,1-2.8,2.1v2.5a3.3,3.3,0,0,1,2.5,1.5,3.6,3.6,0,0,1,.5,2.3,3.3,3.3,0,0,1-3.3,3,3.4,3.4,0,0,1-3.4-2.9A3,3,0,0,1,9,17.2a3.2,3.2,0,0,1,2.4-1.3V13.4a3.4,3.4,0,0,1-3-2.8A3.1,3.1,0,0,1,9.8,7.2,3.3,3.3,0,0,1,13.9,7.4Zm-2.2,5.4A2.8,2.8,0,0,0,14.5,10a2.7,2.7,0,0,0-2.8-2.8,2.8,2.8,0,0,0,0,5.6Zm0,3.7A2.7,2.7,0,0,0,9,19.2,2.7,2.7,0,0,0,11.7,22a2.8,2.8,0,1,0,0-5.5Z' style='fill: %23fff'/%3E%3C/g%3E%3Cline x1='23.2' y1='4.6' x2='23.2' y2='23.5' style='fill: none;stroke: %233d5a80;stroke-miterlimit: 10;stroke-width: 0.5px'/%3E%3C/g%3E%3C/svg%3E%0A");
