--- a/assets/css/imports/_golpen-ui.scss
+++ b/assets/css/imports/_golpen-ui.scss
@@ -84,7 +84,13 @@
       #golem-slate-output{
             border-top:1px solid $two;
             transition: flex .8s $transition-base;
-            min-height: 50vh;
+            // min-height: 50vh;
+            flex: 1;
+            min-height: 40vh;
+            #output-container{
+                width:100%;
+                height:100%;
+            }
             @include media-breakpoint-up(lg) {
                 border-top:none;
                 border-left:1px solid $two;
