--- a/public/css/style.css
+++ b/public/css/style.css
@@ -438,7 +438,11 @@ template {
     #golem-slate-ui-wrap #golem-slate-container #golem-slate-output {
       border-top: 1px solid #3D5A80;
       transition: flex 0.8s cubic-bezier(0.49, -0.32, 0.25, 1.23);
-      min-height: 50vh; }
+      flex: 1;
+      min-height: 40vh; }
+      #golem-slate-ui-wrap #golem-slate-container #golem-slate-output #output-container {
+        width: 100%;
+        height: 100%; }
       @media (min-width: 992px) {
         #golem-slate-ui-wrap #golem-slate-container #golem-slate-output {
           border-top: none;
@@ -609,9 +613,12 @@ select:-moz-focusring {
   background: transparent; }
 
 .form-control ::placeholder {
-  color: inherit;
+  color: #3d4a60;
   /*Fix opacity issue on Firefox*/
   opacity: 1; }
+
+.form-control input[type="text"] {
+  outline: 0; }
 
 .form-control select:focus {
   background: #293241 url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/down.svg) no-repeat right center;
